revised thank you section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ layout: default
 
       </div>
       <div class="col-md-7 title">
-        <h3 class="page-title">Acknowledgements</h3>
+        <h3 class="page-title">Thank You</h3>
         <p class="page-text">
           I want to thank the children that I have had and have the pleasure of teaching.<br>
           Sometimes I think I've learned more from them than they've learned from me.
